# franco-hypermodern-python

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yaml
docs/: conf.py  index.rst  reference.rst
src/franco_hypermodern_python/: __init__.py  console.py  constants.py  wikipedia.py
test/: test_console.py  test_wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
