[tool.poetry]
name = "franco-hypermodern-python"
version = "0.1.0"
description = ""
authors = ["Franco Demarco <franco.demarco@muttdata.ai>"]
readme = "README.md"

[tool.black]
line-length = 88
skip-string-normalization = false
multi_line_output = 3
workers = 1

[tool.pylint.MASTER]
jobs = 1

[tool.pylint.FORMAT]
max-line-length = 88

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["franco_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.scripts]
hypermodern-python = "franco_hypermodern_python.console:main"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.5"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.3.1"}
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
