[tool.poetry]
name = "franco-hypermodern-python"
version = "0.1.0"
description = ""
authors = ["Franco Demarco <franco.demarco@muttdata.ai>"]
readme = "README.md"

[tool.black]
line-length = 88
skip-string-normalization = false
multi_line_output = 3
workers = 1

[tool.pylint.MASTER]
jobs = 1

[tool.pylint.FORMAT]
max-line-length = 88

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["franco_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[[tool.mypy.overrides]]
module = [
    "nox.*",
    "pytest"
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"
desert = "^2022.9.22"
marshmallow = "^3.20.1"

[tool.poetry.scripts]
hypermodern-python = "franco_hypermodern_python.console:main"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.5"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.3.1"}
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
pytest-mock = "^3.11.1"
nox-poetry = "^1.0.3"
bandit = "^1.7.5"
mypy = "^1.5.1"
pytype = {version = "^2023.9.27", python = "3.8"}
typeguard = "^4.1.5"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.1"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
